--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
         <h1>SOY UNA FIGURA</h1>
     </div>
     
-    <footer id="footer">
-       
-    </footer>
+    <!-- <footer id="footer">
+        <div class="padreIntegrantes">
+            <div></div>
+            <div></div>
+            <div></div>
+            </div>
+    </footer> -->
 
     <!-- CONEXIÓN CON EL JAVASCRIPT -->
     <script src="./js/main.js" type="module"></script>
