--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/escritorio/configuracionDesktop.css">
 
     <!--CSS NATALI-->
-
+<link rel="stylesheet" href="./css/escritorio/footernat.css">
 
     <!--CSS GENESIS-->
     <link rel="stylesheet" href="./css/escritorio/menu.css">
@@ -36,13 +36,9 @@
         <h1>SOY UNA FIGURA</h1>
     </div>
     
-    <!-- <footer id="footer">
-        <div class="padreIntegrantes">
-            <div></div>
-            <div></div>
-            <div></div>
-            </div>
-    </footer> -->
+    <footer id="footer">
+        
+    </footer>
 
     <!-- CONEXIÓN CON EL JAVASCRIPT -->
     <script src="./js/main.js" type="module"></script>
