--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
 
     <div id="root"></div>
 
-    <section id="proteinas">
-      
-    </section>
+    <section id="proteinas"></section>
 
     <footer id="footer"></footer>
 
